[package]
name = "cron_clock"
version = "0.6.2"
authors = ["binchengZhao <binchengZhao@outlook.com>"]
repository = "https://github.com/BinChengZhao/cron"
documentation = "https://docs.rs/cron"
readme = "README.md"
description = "A cron expression parser and schedule explorer. Develop based on zslayton/cron."
keywords = [ "cron", "schedule", "repeat", "periodic", "time" ]
license = "MIT"

[lib]
name = "cron_clock"

[dependencies]
chrono = "~0.4"
nom = "~4.1"
error-chain="~0.10.0"
