[package]
name = "cron_clock"
version = "0.7.0"
authors = ["binchengZhao <binchengZhao@outlook.com>"]
repository = "https://github.com/BinChengZhao/cron_clock"
documentation = "https://docs.rs/cron_clock"
readme = "README.md"
description = "A cron expression parser and schedule explorer. Rich documentation and case studies and related upper-level libraries are available."
keywords = [ "cron", "schedule", "repeat", "periodic", "time" ]
license = "MIT OR Apache-2.0"
edition = "2018"

[lib]
name = "cron_clock"

[dependencies]
chrono = "~0.4"
nom = "~4.1"
once_cell = "1.5.2"

[dev-dependencies]
chrono-tz = "0.4"
timed = "0.1.5"
log = "0.4"
